# diri-agent-guardrails

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/diri_agent_guardrails/: __init__.py  advanced.py  enhanced.py  opa.py  protocols.py  safety.py
tests/: test_advanced.py  test_enhanced.py  test_safety.py
